# simple_trader

./: CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/simple_trader/data/: data_point.py  indicators.py  levels.py  simulation_data.py
src/simple_trader/data/stocks/: base_stock.py  binance_stock.py  stock_item.py
src/simple_trader/infrastructure/: config.py  constants.py  logging.py  paths.py
src/simple_trader/position/: base_position.py  coin.py  long_position.py  position.py  short_position.py
src/simple_trader/signals/: atomic.py  base_signal.py  combinators.py  signal_chain.py  signal_manager.py
tests/data/: test_base_stock.py  test_binance_stock.py  test_data_point.py  test_indicators.py  test_levels.py  test_simulation_data.py  test_stock_item.py
tests/infrastructure/: test_config.py  test_constants.py  test_logging.py  test_paths.py
tests/position/: test_base_position.py  test_coin.py  test_long_position.py  test_position.py  test_short_position.py
tests/signals/: conftest.py  test_atomic.py  test_base_signal.py  test_combinators.py  test_signal_chain.py  test_signal_manager.py
